--- a/cn/weapon/ClaretCannon.html
+++ b/cn/weapon/ClaretCannon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>命运神启-灾厄大修Wiki</title>
+    <title>示例武器介绍模板-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,16 +37,16 @@
         </aside>
 
         <main class="main-content">
-            <h1>命运神启</h1>
+            <h1>深红手炮</h1>
             <p> 
-                命运神启是一把困难模式下的法杖类武器，掉落自噬魂幽花<br>
-                它会在敌人四周生成数个环绕的哀怨灵火，不断发射弹幕攻击敌人<br>
-                在使用时，法杖会不断产生向上浮动的小火苗，上升一小段距离后消失，火苗造成14点固定伤害（可暴击）<br>
-                即使在没有魔力的情况下使用这把武器，仍然可以产生小火苗，但不会生成哀怨灵火<br>
-                
-                它的最佳前缀是神话
+                深红手炮是一把困难模式下的枪类武器，在远古操纵机处用4个血石核心制作<br>
+                一次发射三发子弹<br>
+                将火枪子弹转化为吸血的血泪弹<br>
+                更多具体描述...<br>
+                更多具体描述...<br>
+                它的最佳前缀是虚幻
             </p>
-            <img src="FatesReveal.png" alt="M1" width=600>
+            <img src="ClaretCannon.png" alt="ClaretCannon" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -57,16 +57,18 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">命运神启</h1>
-            <img src="FatesReveal.png" alt="FatesReveal">
-            <p class="item-id">内部名: FatesReveal</p>
+            <h1 class="img-Item-Title">示例武器介绍模板</h1>
+            <img src="ClaretCannon.png" alt="ClaretCannon">
+            <p class="item-id">内部名: 示例武器介绍模板</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 57</p>
+            <p class="item-damage">伤害: 144</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                生成数个哀怨灵火攻击敌人
+                这里是物品在游戏中的描述<br>
+                这里是物品在游戏中的描述<br>
+                这里是物品在游戏中的描述
             </p>
         </div>        
     </div>
