--- a/cn/weapon/DaemonsFlame.html
+++ b/cn/weapon/DaemonsFlame.html
@@ -39,12 +39,12 @@
         <main class="main-content">
             <h1>鬼火弓</h1>
             <p> 
-                鬼火弓是一把.....的....武器，掉落.....<br>
+                鬼火弓是一把困难模式下的弓箭类武器，掉落自噬魂幽花<br>
                 将木箭转化为鬼火簇<br>
                 发射其余箭矢时会额外发射恶魔火球<br>
+                
                 更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                它的最佳前缀是虚幻
             </p>
             <img src="DaemonsFlame.png" alt="DaemonsFlame" width=600>
             <p class="extra-tip">——额外tip</p>
@@ -61,7 +61,7 @@
             <img src="DaemonsFlame.png" alt="DaemonsFlame">
             <p class="item-id">内部名: DaemonsFlame</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 157</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
