--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -240,6 +240,14 @@
                     
                     <p>风暴女神之矛</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/ClaretCannon.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/ClaretCannon.png" alt="ClaretCannon">
+                    </div>
+                    
+                    <p>深红手炮</p>
+                </div>
             </div>
         </main>
     </div>
