--- a/cn/weapon/ClaretCannon.html
+++ b/cn/weapon/ClaretCannon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>示例武器介绍模板-灾厄大修Wiki</title>
+    <title>深红手炮-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -39,17 +39,15 @@
         <main class="main-content">
             <h1>深红手炮</h1>
             <p> 
-                深红手炮是一把困难模式下的枪类武器，在远古操纵机处用4个血石核心制作<br>
-                一次发射三发子弹<br>
-                将火枪子弹转化为吸血的血泪弹<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                深红手炮是一把月球领主后的射手武器。<br>
+                一次发射三发子弹。<br>
+                将火枪子弹转化为吸血的血泪弹，血泪弹会造成武器面板的伤害。<br>
                 它的最佳前缀是虚幻
             </p>
             <img src="ClaretCannon.png" alt="ClaretCannon" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Claret_Cannon">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -57,18 +55,16 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">示例武器介绍模板</h1>
+            <h1 class="img-Item-Title">深红手炮</h1>
             <img src="ClaretCannon.png" alt="ClaretCannon">
-            <p class="item-id">内部名: 示例武器介绍模板</p>
+            <p class="item-id">内部名: ClaretCannon</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 144</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-knockback">击退: 5.5</p>
+            <p class="item-usetimer">使用时间: 3</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “拿着它，你会渴望着鲜血”
             </p>
         </div>        
     </div>
