--- a/cn/weapon/DaemonsFlame.html
+++ b/cn/weapon/DaemonsFlame.html
@@ -39,11 +39,9 @@
         <main class="main-content">
             <h1>鬼火弓</h1>
             <p> 
-                鬼火弓是一把困难模式下的弓箭类武器，掉落自噬魂幽花<br>
-                将木箭转化为鬼火簇<br>
-                发射其余箭矢时会额外发射恶魔火球<br>
-                
-                更多具体描述...<br>
+                鬼火弓是一把月球领主后的远程武器，掉落自噬魂幽花。<br>
+                将木箭转化为鬼火簇，鬼火簇造成武器面板的伤害。<br>
+                发射其余箭矢时会额外发射恶魔火球，恶魔火球造成武器面板的伤害。<br>
                 它的最佳前缀是虚幻
             </p>
             <img src="DaemonsFlame.png" alt="DaemonsFlame" width=600>
@@ -57,18 +55,16 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">示例武器介绍模板</h1>
+            <h1 class="img-Item-Title">鬼火弓</h1>
             <img src="DaemonsFlame.png" alt="DaemonsFlame">
             <p class="item-id">内部名: DaemonsFlame</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 157</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 150</p>
+            <p class="item-knockback">击退: 4</p>
+            <p class="item-usetimer">使用时间: 12</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “拿着它，你感受到深深的仇恨，地牢的幽魂随时准备着复仇”
             </p>
         </div>        
     </div>
