--- a/cn/weapon/DivineSourceBlade.html
+++ b/cn/weapon/DivineSourceBlade.html
@@ -39,14 +39,16 @@
         <main class="main-content">
             <h1>金源灭却刃</h1>
             <p> 
-                金源灭却刃是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                金源灭却刃是一把月球领主后的近战武器，由泰拉巨刃和宙能波涌剑的上位合成。<br>
+                左键挥舞并且发射金源之刃，命中敌人后进行绞杀。<br>
+                并且会有额外的小范围金源剑气。<br>
+                它的最佳前缀是传奇
             </p>
-            <img src="DivineSourceBlade.png" alt="M1" width=600>
+            <img src="DivineSourceBlade.png" alt="DivineSourceBlade" width=600>
+            <p>
+                金源之刃仅会对第一个命中的敌人造成额外追杀效果，且只能穿透四个敌人，无穿透减伤；<br>
+                金源之刃造成武器面板的伤害，金源剑气造成武器面板的1.2倍伤害。
+            </p>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -58,12 +60,12 @@
 
         <div class="image-block">
             <h1 class="img-Item-Title">金源灭却刃</h1>
-            <img src="DivineSourceBlade.png" alt="M1">
+            <img src="DivineSourceBlade.png" alt="DivineSourceBlade">
             <p class="item-id">内部名: DivineSourceBlade</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 500</p>
+            <p class="item-knockback">击退: 5.5</p>
+            <p class="item-usetimer">使用时间: 15</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 挥舞金源之力<br>
