--- a/cn/weapon/DragonsScaleGreatsword.html
+++ b/cn/weapon/DragonsScaleGreatsword.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>龙藻巨刃</h1>
             <p> 
-                龙藻巨刃是一把.....的....武器，掉落.....<br>
+                龙藻巨刃是一把月球领主后的近战武器。<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
