--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -264,6 +264,14 @@
                     
                     <p>银河之灾</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/AnnihilatingUniverse.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/AnnihilatingUniverse.png" alt="AnnihilatingUniverse">
+                    </div>
+                    
+                    <p>湮宇星矢</p>
+                </div>
             </div>
         </main>
     </div>
