--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -272,6 +272,14 @@
                     
                     <p>湮宇星矢</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/HeavenfallLongbow.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/HeavenfallLongbow.png" alt="HeavenfallLongbow">
+                    </div>
+                    
+                    <p>天堂陨落长弓</p>
+                </div>
             </div>
         </main>
     </div>
