--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <aside class="sidebar">
             <nav>
                 <ul>
-                    <li><a href="/cn/core/weaponList.html">武器</a></li>
-                    <li><a href="/cn/core/mechanism.html">机制</a></li>
-                    <li><a href="/cn/core/biology.html">生物</a></li>
-                    <li><a href="/cn/core/aboutMod.html">关于模组</a></li>
+                    <li id="1s"><a href="#">武器</a></li>
+                    <li id="2s"><a href="#">机制</a></li>
+                    <li id="3s"><a href="#">生物</a></li>
+                    <li id="4s"><a href="#">关于模组</a></li>
                 </ul>
             </nav>
         </aside>
