--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -280,6 +280,14 @@
                     
                     <p>天堂陨落长弓</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/AegisBlade.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/AegisBlade.png" alt="AegisBlade">
+                    </div>
+                    
+                    <p>庇护之刃</p>
+                </div>
             </div>
         </main>
     </div>
