--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -288,6 +288,14 @@
                     
                     <p>庇护之刃</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/Murasama.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/MurasamaPage.gif" alt="Murasama">
+                    </div>
+                    
+                    <p>鬼妖村正</p>
+                </div>
             </div>
         </main>
     </div>
