--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -296,6 +296,14 @@
                     
                     <p>鬼妖村正</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/HolyCollider.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/HolyCollider.png" alt="HolyCollider">
+                    </div>
+                    
+                    <p>圣火之刃</p>
+                </div>
             </div>
         </main>
     </div>
