--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -312,6 +312,14 @@
                     
                     <p>暗雷回响</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/CelestialClaymore.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/CelestialClaymore.png" alt="CelestialClaymore">
+                    </div>
+                    
+                    <p>天神之剑</p>
+                </div>
             </div>
         </main>
     </div>
