--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -336,6 +336,14 @@
                     
                     <p>制裁大剑</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/StarnightLance.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/StarnightLance.png" alt="StarnightLance">
+                    </div>
+                    
+                    <p>星夜长枪</p>
+                </div>
             </div>
         </main>
     </div>
