--- a/cn/weapon/StarnightLance.html
+++ b/cn/weapon/StarnightLance.html
@@ -41,10 +41,8 @@
             <p> 
                 星夜长枪是一把困难模式的下长矛类武器，由12个寒元锭在秘银砧处合成<br>
                 发射寒冷的星夜光矛<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                
+                它的最佳前缀是神级
             </p>
             <img src="StarnightLance.png" alt="StarnightLance" width=600>
             <p class="extra-tip">——额外tip</p>
@@ -67,8 +65,7 @@
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 令人通体生寒<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                
             </p>
         </div>        
     </div>
