--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -368,6 +368,14 @@
                     
                     <p> 硫火短剑</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/PhosphorescentGauntlet.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/PhosphorescentGauntlet.png" alt="PhosphorescentGauntlet">
+                    </div>
+                    
+                    <p> 磷光拳套</p>
+                </div>
             </div>
         </main>
     </div>
