--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -657,6 +657,14 @@
                     <p>腐臭倾泻者</p>
                 </div>
 
+                <div class="weapon-item" onclick="location.href='/cn/weapon/BarrenBow.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/BarrenBow.png" alt="BarrenBow">
+                    </div>
+                    
+                    <p>荒芜弓</p>
+                </div>
+
                 <div class="weapon-item" onclick="location.href='/cn/weapon/Seadragon.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/Seadragon.png" alt="Seadragon">
