--- a/cn/weapon/BarrenBow.html
+++ b/cn/weapon/BarrenBow.html
@@ -59,7 +59,7 @@
         <div class="image-block">
             <h1 class="img-Item-Title">荒芜弓</h1>
             <img src="BarrenBow.png" alt="BarrenBow">
-            <p class="item-id">内部名: 荒芜弓</p>
+            <p class="item-id">内部名: BarrenBow</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 10</p>
             <p class="item-knockback">击退: 0</p>
