--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -904,6 +904,14 @@
                     
                     <p>玷污之疫SMG</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/Scorpio.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/Scorpio.png" alt="Scorpio">
+                    </div>
+                    
+                    <p>天蝎座</p>
+                </div>
             </div>
         </main>
     </div>
