--- a/cn/weapon/DragonsScaleGreatsword.html
+++ b/cn/weapon/DragonsScaleGreatsword.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>龙藻巨刃</h1>
             <p> 
-                龙藻巨刃是一把月球领主后的近战武器。<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                龙藻巨刃是一把亵渎天神后的近战武器，使用15个龙蒿锭、15个永恒锭、15个叶绿锭，在远古操纵机处合成。<br>
+                发射螺旋绿藻剑气，命中目标后会在目标处炸开数团毒藻雾<br>
+                真近战攻击会生成大量从四周汇聚而来的毒藻雾<br>
+                毒藻雾会使命中的目标附带中毒debuff<br>
+                
+                它的最佳前缀是传奇
             </p>
-            <img src="/Asset/M1.gif" alt="M1" width=600>
+            <img src="DragonsScaleGreatsword.png" alt="DragonsScaleGreatsword" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +61,14 @@
             <img src="DragonsScaleGreatsword.png" alt="DragonsScaleGreatsword">
             <p class="item-id">内部名: DragonsScaleGreatsword</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 232</p>
+            <p class="item-knockback">击退: 2.5</p>
+            <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射螺旋绿藻剑气，命中目标后炸成数团毒藻雾<br>
+                真近战攻击会生成大量毒藻雾<br>
+                
             </p>
         </div>        
     </div>
