--- a/cn/weapon/StormGoddessSpear.html
+++ b/cn/weapon/StormGoddessSpear.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>风暴女神之矛</h1>
             <p> 
-                风暴女神之矛是一把月亮领主后的近战武器，掉落.....<br>
+                风暴女神之矛是一把月亮领主后的近战武器，使用风暴长矛、风暴管束者、风暴剃刀、5个风暴之颚和15个夜明锭在远古操纵机处合成<br>
+                攻击释放的风暴之吻弹幕，会在飞行一段时间或者碰到物块时，根据攻击的大致方向（偏上或者偏下），变成一个可穿墙的小弹幕<br>
+                小弹幕在向上（或向下）缓慢浮动一段距离后炸成电火花和一道电弧，对范围内目标造成伤害<br>
+                风暴之吻弹幕无限穿透，命中目标会产生电弧，这使得它或许更适合应对特殊事件<br>
                 更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                它的最佳前缀是神级
             </p>
-            <img src="/Asset/M1.gif" alt="M1" width=600>
+            <img src="StormGoddessSpear.gif" alt="StormGoddessSpear" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
