--- a/cn/weapon/SeasSearing.html
+++ b/cn/weapon/SeasSearing.html
@@ -59,7 +59,7 @@
         <div class="image-block">
             <h1 class="img-Item-Title">海之烧灼</h1>
             <img src="SeasSearing.png" alt="SeasSearing">
-            <p class="item-id">内部名: 海之烧灼</p>
+            <p class="item-id">内部名: SeasSearing</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 10</p>
             <p class="item-knockback">击退: 0</p>
