--- a/cn/weapon/SnowQuay.html
+++ b/cn/weapon/SnowQuay.html
@@ -37,16 +37,16 @@
         </aside>
 
         <main class="main-content">
-            <h1>天蝎座</h1>
+            <h1>示例武器介绍模板</h1>
             <p> 
-                天蝎座是一把.....的....武器，掉落.....<br>
+                示例武器介绍模板是一把.....的....武器，掉落.....<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 它的最佳前缀是...
             </p>
-            <img src="Scorpio.png" alt="Scorpio" width=600>
+            <img src="SnowQuay.png" alt="SnowQuay" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -57,9 +57,9 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">天蝎座</h1>
-            <img src="Scorpio.png" alt="Scorpio">
-            <p class="item-id">内部名: Scorpio</p>
+            <h1 class="img-Item-Title">示例武器介绍模板</h1>
+            <img src="SnowQuay.png" alt="SnowQuay">
+            <p class="item-id">内部名: 示例武器介绍模板</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 10</p>
             <p class="item-knockback">击退: 0</p>
