--- a/cn/weapon/Starmada.html
+++ b/cn/weapon/Starmada.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>暗雷回响-灾厄大修Wiki</title>
+    <title>群星大炮-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,16 +37,16 @@
         </aside>
 
         <main class="main-content">
-            <h1>暗雷回响</h1>
+            <h1>群星大炮</h1>
             <p> 
-                暗雷回响是一把.....的....武器，掉落.....<br>
+                群星大炮是一把.....的....武器，掉落.....<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 它的最佳前缀是...
             </p>
-            <img src="PerfectDark.png" alt="PerfectDark" width=600>
+            <img src="Starmada.png" alt="Starmada" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -57,9 +57,9 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">暗雷回响</h1>
-            <img src="PerfectDark.png" alt="PerfectDark">
-            <p class="item-id">内部名: 暗雷回响</p>
+            <h1 class="img-Item-Title">群星大炮</h1>
+            <img src="Starmada.png" alt="Starmada">
+            <p class="item-id">内部名: Starmada</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 10</p>
             <p class="item-knockback">击退: 0</p>
