--- a/cn/weapon/BrinyBaron.html
+++ b/cn/weapon/BrinyBaron.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>海爵剑-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
-    <link rel="stylesheet" href="/languageSelector.css">
-    <link rel="stylesheet" href="/searchTool/searchStyle.css">
-    <link rel="stylesheet" href="/weaponPage.css">
+    <link rel="preload" href="/languageSelector.css" as="style" onload="this.rel='stylesheet'">
+    <link rel="preload" href="/searchTool/searchStyle.css" as="style" onload="this.rel='stylesheet'">
+    <link rel="preload" href="/weaponPage.css" as="style" onload="this.rel='stylesheet'">
 </head>
 <body>
     <header class="wiki-header">
