--- a/404.html
+++ b/404.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>页面错误-灾厄大修Wiki</title>
-    <link rel="stylesheet" href="404.css">
-    <link rel="stylesheet" href="languageSelector.css">
-    <link rel="stylesheet" href="searchTool/searchStyle.css">
+    <link rel="stylesheet" href="/404.css">
+    <link rel="stylesheet" href="/languageSelector.css">
+    <link rel="stylesheet" href="/searchTool/searchStyle.css">
 </head>
 <body>
     <div class="wiki-header">
@@ -19,8 +19,8 @@
         <div id="search-results">
             <div class="search-result-item"></div>
         </div>
-        <script src="searchTool/searchDictionary.js" defer></script>
-        <script src="searchTool/searchSystem.js"></script>
+        <script src="/searchTool/searchDictionary.js" defer></script>
+        <script src="/searchTool/searchSystem.js"></script>
     </div>
     <div class="content">
         <div class="sidebar">
@@ -35,7 +35,7 @@
             </nav>
         </div>
         <div class="main-content">
-            <img src="Asset/M2.gif" alt="错误图标" class="error-icon">
+            <img src="/Asset/M2.gif" alt="错误图标" class="error-icon">
             <h1>页面未找到</h1>
             <p>您尝试访问的页面还在施工中</p>
             <p>您可以向开发人员反馈来催促完善该界面，或使用左侧的菜单导航至其他页面</p>
@@ -44,6 +44,6 @@
     <footer class="wiki-footer">
         <p>&copy; 2024 CalamityOverhaul Wiki. 保留所有权利.</p>
     </footer>
-    <script src="404_language.js" defer></script>
+    <script src="/404_language.js" defer></script>
 </body>
 </html>
