--- a/cn/weapon/AegisBlade.html
+++ b/cn/weapon/AegisBlade.html
@@ -39,17 +39,22 @@
         <main class="main-content">
             <h1>庇护之刃</h1>
             <p> 
-                庇护之刃是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                庇护之刃是一把困难模式下的阔剑类武器，掉落自石巨人。<br>
+                它的左键攻击周期为四个阶段<br>
+                第一阶段分为七次挥舞，刀刃会造成1倍的武器面板伤害，并且每次挥舞会发射出一颗追踪敌人的庇护之火<br>
+                第二阶段为一次小范围的挥砍，刀刃会造成1倍的武器面板伤害<br>
+                第三阶段为自上而下的挥砍，发射出三枚追踪敌人的庇护之火<br>
+                第四阶段为自下而上的挥砍，发射出三枚追踪敌人的庇护之火<br>
+                庇护之火造成50%的武器面板伤害，庇护之火击中敌怪或物块时，会分裂成3个庇护火花，每个火花造成75%庇护之火的伤害。<br>
+                火花无法穿透敌人，并且会停留在地面上2秒。火花击中敌人时，它会生成造成75%火花伤害的爆炸。<br>
+                长按右键在头顶生成一个大型庇护之刃，停止右键发射大型庇护之刃<br>
+                大型庇护之刃将追踪距离其最近的敌方单位，命中时爆炸，造成大范围伤害并生成大量庇护之火<br>
+                它的最佳前缀是传奇
             </p>
-            <img src="AegisBlade.png" alt="M1" width=600>
+            <img src="AegisBlade.gif" alt="M1" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Aegis_Blade">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -61,14 +66,13 @@
             <img src="AegisBlade.png" alt="M1">
             <p class="item-id">内部名: AegisBlade </p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 72</p>
+            <p class="item-knockback">击退: 2.25</p>
+            <p class="item-usetimer">使用时间: 13</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                挥舞时抛出惩戒火球<br>
+                右键生成庇护巨刃
             </p>
         </div>        
     </div>
