--- a/cn/weapon/CelestialClaymore.html
+++ b/cn/weapon/CelestialClaymore.html
@@ -39,17 +39,17 @@
         <main class="main-content">
             <h1>天神之剑</h1>
             <p> 
-                天神之剑是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                天神之剑是一把困难模式阔剑类武器，掉落自生物群落宝箱怪。<br>
+                使用时挥舞并在周围生成爆炸烁星<br>
+                刀刃击中爆炸烁星时将朝向鼠标方向飞出<br>
+                爆炸烁星命中将爆炸并对小范围内目标造成霜冻减益<br>
+                爆炸烁星只会生成在人物上方，即便使用了重力翻转<br>
+                它的最佳前缀是传奇
             </p>
-            <img src="CelestialClaymore.png" alt="CelestialClaymore" width=600>
+            <img src="CelestialClaymore.gif" alt="CelestialClaymore" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Celestial_Claymore">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -61,9 +61,9 @@
             <img src="CelestialClaymore.png" alt="CelestialClaymore">
             <p class="item-id">内部名: CelestialClaymore</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 65</p>
+            <p class="item-knockback">击退: 5.25</p>
+            <p class="item-usetimer">使用时间: 22</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 挥舞时在周围生成爆炸烁星<br>
