--- a/cn/weapon/CosmicCalamity.html
+++ b/cn/weapon/CosmicCalamity.html
@@ -39,18 +39,15 @@
         <main class="main-content">
             <h1>银河之灾</h1>
             <p> 
-                银河之灾.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                银河之灾是一个月亮领主后的可制作的标枪类武器，是越浪蛟的直接升级。<br>
+                使用时，玩家会掷出不受重力影响的追踪银河灾虫，银河灾虫能够穿透八个敌人和穿过物块。<br>
+                使用银河之灾进行潜伏攻击将会在击中时造成一次热射十字爆<br>
+                银河灾虫将对第一个命中的目标造成弑神怒焰减益<br>
+                它的最佳前缀是化境
             </p>
             <img src="/Asset/M1.gif" alt="M1" width=600>
-            <p class="extra-tip">——额外tip</p>
-            <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
+            <p class="extra-tip">——银河灾虫被掷出一段时间后会播放钻地音效</p>
+
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
             </button>
@@ -59,16 +56,15 @@
         <div class="image-block">
             <h1 class="img-Item-Title">银河之灾</h1>
             <img src="CosmicCalamity.png" alt="CosmicCalamity">
-            <p class="item-id">内部名: 示例武器介绍模板</p>
+            <p class="item-id">内部名: CosmicCalamity</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 482</p>
+            <p class="item-knockback">击退: 4</p>
+            <p class="item-usetimer">使用时间: 15</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                掷出追踪的银河灾虫<br>
+                潜伏攻击造成一次热射十字爆<br>
             </p>
         </div>        
     </div>
