--- a/cn/weapon/GreatswordofJudgement.html
+++ b/cn/weapon/GreatswordofJudgement.html
@@ -39,17 +39,16 @@
         <main class="main-content">
             <h1>制裁大剑</h1>
             <p> 
-                制裁大剑是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                制裁大剑是一把可制作的月亮领主后的阔剑类武器。<br>
+                使用时挥舞造成100%武器面板伤害并发射追踪剑型弹幕<br>
+                剑型弹幕两侧会不断生成白色光球弹幕<br>
+                剑型弹幕命中敌人时生成花型白色弹幕，造成多段伤害<br>
+                它的最佳前缀是传奇
             </p>
-            <img src="GreatswordofJudgement.png" alt="M1" width=600>
+            <img src="GreatswordofJudgement.gif" alt="M1" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Greatsword_of_Judgement">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -61,14 +60,16 @@
             <img src="GreatswordofJudgement.png" alt="GreatswordofJudgement">
             <p class="item-id">内部名: GreatswordofJudgement</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 40</p>
+            <p class="item-knockback">击退: 7</p>
+            <p class="item-usetimer">使用时间: 18</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射一个白色光球，在消失后一段时间内落下白色追踪雨滴<br>
+                遗忘之土的白色长剑<br>
+                你可以听到这把剑传出的虚弱而带安抚的耳语<br>
+                “无论何地，你都不会孤身一人<br>
+                我会永远陪伴在你身边，我的王”
             </p>
         </div>        
     </div>
