--- a/cn/weapon/HolyCollider.html
+++ b/cn/weapon/HolyCollider.html
@@ -39,17 +39,17 @@
         <main class="main-content">
             <h1>圣火之刃</h1>
             <p> 
-                圣火之刃是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                圣火之刃是一把月亮领主后的阔剑类武器，可由天神之剑升级而来，或由亵渎天神掉落。<br>
+                使用时挥舞时刀刃对敌人造成1倍武器面板伤害并向光标方向发射渎火射线<br>
+                渎火射线将在光标处爆炸，对小范围内敌人造成大量伤害<br>
+                每六次攻击后将强化渎火射线与爆炸的威力和范围<br>
+                渎火射线与爆炸均可穿墙<br>
+                它的最佳前缀是传奇
             </p>
-            <img src="HolyCollider.png" alt="M1" width=600>
+            <img src="HolyCollider.gif" alt="M1" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Holy_Collider">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -61,14 +61,13 @@
             <img src="HolyCollider.png" alt="M1">
             <p class="item-id">内部名: HolyCollider</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 230</p>
+            <p class="item-knockback">击退: 3.75</p>
+            <p class="item-usetimer">使用时间: 30</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射一道渎火射线，在光标处引发一次爆炸<br>
+                每间隔六次会进行一次强化攻击
             </p>
         </div>        
     </div>
