--- a/cn/weapon/TheEnforcer.html
+++ b/cn/weapon/TheEnforcer.html
@@ -39,17 +39,16 @@
         <main class="main-content">
             <h1>暴政</h1>
             <p> 
-                暴政是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                暴政是一把月亮领主后的阔剑类武器，可由圣火之刃升级而来。<br>
+                使用时挥舞刀刃造成100%武器面板伤害并在周围生成宇宙之火<br>
+                宇宙之火将逐渐靠近人物，在接触敌人时爆炸,造成25%武器面板伤害并对目标造成霜冻减益<br>
+                宇宙之火存在一段时间后将自动爆炸<br>
+                它的最佳前缀是传奇
             </p>
-            <img src="TheEnforcer.png" alt="M1" width=600>
+            <img src="TheEnforcer.gif" alt="M1" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/The_Enforcer">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -61,9 +60,9 @@
             <img src="TheEnforcer.png" alt="TheEnforcer">
             <p class="item-id">内部名: TheEnforcer</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 690</p>
+            <p class="item-knockback">击退: 9</p>
+            <p class="item-usetimer">使用时间: 17</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 挥舞时在周围生成宇宙之火<br>
