--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -1392,6 +1392,14 @@
                     
                     <p>酸腐弓</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/VernalBolter.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/VernalBolter.png" alt="VernalBolter">
+                    </div>
+                    
+                    <p>春熙弓</p>
+                </div>
             </div>
         </main>
     </div>
