--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -1656,6 +1656,14 @@
                     
                     <p>黑暗大师之剑</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/FrostcrushValari.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/FrostcrushValari.png" alt="FrostcrushValari">
+                    </div>
+                    
+                    <p>寒霜回旋镖</p>
+                </div>
             </div>
         </main>
     </div>
