--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -1664,6 +1664,14 @@
                     
                     <p>寒霜回旋镖</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/NeutronScythe.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/NeutronScythe.gif" alt="NeutronScythe">
+                    </div>
+                    
+                    <p>黑洞使者</p>
+                </div>
             </div>
         </main>
     </div>
