--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -1907,7 +1907,7 @@
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/Devastation.html'">
                     <div class="image-container">
-                        <img src="/cn/weapon/Devastation.png" alt="Devastation">
+                        <img src="/cn/weapon/Devastation.gif" alt="Devastation">
                     </div>
                     
                     <p>破坏重剑</p>
