--- a/cn/weapon/Devastation.html
+++ b/cn/weapon/Devastation.html
@@ -46,7 +46,7 @@
                 更多具体描述...<br>
                 它的最佳前缀是...
             </p>
-            <img src="Devastation.png" alt="Devastation" width=600>
+            <img src="Devastation.gif" alt="Devastation" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -58,7 +58,7 @@
 
         <div class="image-block">
             <h1 class="img-Item-Title">破坏重剑</h1>
-            <img src="Devastation.png" alt="Devastation">
+            <img src="Devastation.gif" alt="Devastation">
             <p class="item-id">内部名: Devastation</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 10</p>
