--- a/cn/weapon/BansheeHook.html
+++ b/cn/weapon/BansheeHook.html
@@ -46,11 +46,11 @@
                 吟唱结束后会在鼠标位置生存镰刀射弹，镰刀射弹击中敌人后会产生深渊幽魂进行追击。<br>
                 它的最佳前缀是神级
             </p>
-            <img src="BansheeHook.png" alt="BansheeHook" width=600>
+            <img src="BansheeHook.gif" alt="BansheeHook" width=600>
             <p>
-                右键所造成的弹幕伤害仅有原本伤害的一半，并且附带多种减益效果。
+                右键所造成的弹幕伤害仅有原本伤害的一半，并且附带多种减益效果
             </p>
-            <!--<p class="extra-tip">——额外tip</p>-->
+            <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Banshee_Hook">查看原版信息</a>
             </button>
