--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -190,7 +190,7 @@
                         <img src="/cn/weapon/AzureDragonRage.png" alt="AzureDragonRage">
                     </div>
                     
-                    <p>元素长鞭</p>
+                    <p>青龙之怒</p>
                 </div>
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/BleedingScourge.html'">
