--- a/cn/weapon/DragonsScaleGreatsword.html
+++ b/cn/weapon/DragonsScaleGreatsword.html
@@ -46,7 +46,7 @@
                 
                 它的最佳前缀是传奇
             </p>
-            <img src="DragonsScaleGreatsword.png" alt="DragonsScaleGreatsword" width=600>
+            <img src="DragonsScaleGreatsword.gif" alt="DragonsScaleGreatsword" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
