--- a/cn/weapon/Excelsus.html
+++ b/cn/weapon/Excelsus.html
@@ -44,7 +44,7 @@
                 用剑刃攻击到敌人，会产生宇宙射线进行追杀。
                 它的最佳前缀是传奇
             </p>
-            <img src="Excelsus.png" alt="Excelsus" width=600>
+            <img src="Excelsus.gif" alt="Excelsus" width=600>
             <p>
                 左键发射的宇宙之刃能够穿透三个敌人，造成武器面板的伤害；<br>
                 右键发射的寰宇光暗矢命中敌人会产生爆炸伤害，造成武器面板的四倍伤害。
