--- a/cn/weapon/Arbalest.html
+++ b/cn/weapon/Arbalest.html
@@ -43,11 +43,11 @@
                 劲弩按住鼠标左键会发射六支高速箭，鼠标右键进行高速连射。<br>
                 它的最佳前缀是虚幻
             </p>
-            <img src="Arbalest.png" alt="Arbalest" width=600>
+            <img src="Arbalest.gif" alt="Arbalest" width=600>
             <p>
                 劲弩的左键与右键攻击都会造成武器面板的伤害。
             </p>
-            <p class="extra-tip">——额外tip</p>
+            <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Arbalest">查看原版信息</a>
             </button>
