--- a/cn/weapon/BleedingScourge.html
+++ b/cn/weapon/BleedingScourge.html
@@ -43,7 +43,7 @@
                 血色鞭挞左键攻击到敌人会是召唤物集中攻击敌人，并且从天上落下三个血雨，血雨造成武器面板的二分之一伤害。<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="BleedingScourge.png" alt="BleedingScourge" width=600>
+            <img src="BleedingScourge.gif" alt="BleedingScourge" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
