--- a/cn/weapon/ClaretCannon.html
+++ b/cn/weapon/ClaretCannon.html
@@ -44,7 +44,7 @@
                 将火枪子弹转化为吸血的血泪弹，血泪弹会造成武器面板的伤害。<br>
                 它的最佳前缀是虚幻
             </p>
-            <img src="ClaretCannon.png" alt="ClaretCannon" width=600>
+            <img src="ClaretCannon.gif" alt="ClaretCannon" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Claret_Cannon">查看原版信息</a>
