--- a/cn/weapon/CosmicCalamity.html
+++ b/cn/weapon/CosmicCalamity.html
@@ -45,7 +45,7 @@
                 银河灾虫将对第一个命中的目标造成弑神怒焰减益<br>
                 它的最佳前缀是化境
             </p>
-            <img src="/Asset/M1.gif" alt="M1" width=600>
+            <img src="CosmicCalamity.gif" alt="CosmicCalamity" width=600>
             <p class="extra-tip">——银河灾虫被掷出一段时间后会播放钻地音效</p>
 
             <button id ="href_button">
