--- a/cn/weapon/DeathhailStaff.html
+++ b/cn/weapon/DeathhailStaff.html
@@ -43,8 +43,8 @@
                 死亡冰雹鼠标左键会令大量的死亡冰雹从天而降。<br>
                 它的最佳前缀是神话
             </p>
-            <img src="DeathhailStaff.png" alt="DeathhailStaff" width=600>
-            <p class="extra-tip">——额外tip</p>
+            <img src="DeathhailStaff.gif" alt="DeathhailStaff" width=600>
+            <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Deathhail_Staff">查看原版信息</a>
             </button>
@@ -56,7 +56,7 @@
         <div class="image-block">
             <h1 class="img-Item-Title">死亡冰雹</h1>
             <img src="DeathhailStaff.png" alt="DeathhailStaff">
-            <p class="item-id">内部名: 死亡冰雹</p>
+            <p class="item-id">内部名: DeathhailStaff</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 328</p>
             <p class="item-knockback">击退: 4</p>
