--- a/cn/weapon/DragonRage.html
+++ b/cn/weapon/DragonRage.html
@@ -42,11 +42,11 @@
                 巨龙之怒是一把月球领主后的近战武器，掉落于丛林龙。<br>
                 巨龙之怒鼠标左键可发动三连挥砍，依次为上劈、下劈、大挥砍和捅刺。<br>
                 捅刺拥有较长的攻击距离，击中目标后会引发剧烈的龙焰爆炸。<br>
-                键则进行两次大幅度劈砍，接着持续旋转刀身，依次为大上劈、大下劈和旋刃。<br>
+                右键则进行两次大幅度劈砍，接着持续旋转刀身，依次为大上劈、大下劈和旋刃。<br>
                 左键的使用会重置右键的攻击等级。<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="DragonRage.png" alt="DragonRage" width=600>
+            <img src="DragonRage.gif" alt="DragonRage" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Dragon_Rage">查看原版信息</a>
@@ -59,7 +59,7 @@
         <div class="image-block">
             <h1 class="img-Item-Title">巨龙之怒</h1>
             <img src="DragonRage.png" alt="Deathwind">
-            <p class="item-id">内部名: 巨龙之怒</p>
+            <p class="item-id">内部名: DragonRage</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 920</p>
             <p class="item-knockback">击退: 7.5</p>
